antlr/CandidateRequirementsGrammarValidation.g4
grammar CandidateRequirementsGrammarValidation;

@header {
    package gen.antlr;
}

file: (qaPair NEWLINE?)+ EOF;

qaPair: question NEWLINE answer NEWLINE?;

question:
      'How many years of experience do you have in IT?'
    | 'Select your Degree (None, Bachelor, Master, PhD)'
    | 'Which operating systems are you proficient in? (Windows, Linux) Note: Seperated by ","'
    | 'Which programming or scripting languages are you proficient in? (Python, Java, C++, Bash, PowerShell) Note: Seperated by ","'
    | 'How many years of experience do you have in penetration testing?'
    | 'Do you have any of the following certifications? (OSCP, CEH, CISSP, GPEN, CISM) Note: Seperated by ","'
    | 'Which penetration testing tools are you proficient in? (Metasploit, Burp Suite, Nmap, Wireshark, Nessus) Note: Seperated by ","'
    | 'Are you familiar with the OWASP Top Ten vulnerabilities? (Yes or No)'
    | 'How would you rate your analytical and problem-solving skills? (1-5)'
    | 'Can you start working within the next month? (Yes or No)';

answer: TEXT;

TEXT: ~[\r\n]+;
NEWLINE: '\r'? '\n';

WS: [ \t]+ -> skip;
